# CyberEye

./: CMakeLists.txt  Doxyfile.in  LICENSES.txt  Misc.txt  README.md  ce.h  cybereye.h
cybereye/: backgroundsubtractorth.h  bkgsegmentationengine.h  collection.h  collector.h  coremanager.h  cybereye.h  dispatcher.h  engine.h  imgcollector.h  imgobj.h  model.h  objcollection.h  objectdispatcher.h  objreceiver.h  objtracker.h  receiver.h  recognitionengine.h  tcpchannel.h  tracker.h  watershedengine.h
src/: backgroundsubtractorth.cpp  bkgsegmentationengine.cpp  collector.cpp  coremanager.cpp  cybereye.cpp  engine.cpp  imgcollector.cpp  imgobj.cpp  model.cpp  objcollection.cpp  objectdispatcher.cpp  objreceiver.cpp  objtracker.cpp  recognitionengine.cpp  tcpchannel.cpp  tracker.cpp  watershedengine.cpp
